# ChatRoom

./: data.py  main.py  pyproject.toml  readme.md
src/: myData.py  myRoutes.py  mySocket.py
src/static/: chatview.js  socket.js
src/templates/: index.jinja  landing.jinja
static/: chatview.js  msgbox.js  styles.css
templates/: index.jinja
