[tool.poetry]
name = "chatroom"
version = "0.1.0"
description = "Just a basic chatroom i made for fun"
authors = ["Parth Dundh <french-fri@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Flask-SocketIO = "^5.3.6"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
